--- a/Github Profile Finder/style.css
+++ b/Github Profile Finder/style.css
@@ -3,33 +3,27 @@
 }
 
 body {
-  background: #fc4a1a;
-  background: linear-gradient(to right, #f7b733, #fc4a1a); 
+  background: #ff0055;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: "Poppins", sans-serif;
+  font-family: 'Times New Roman', Times, serif;
   margin: 0;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 input {
-  background-color: #fc4a1a;
+  background-color: #ff99cc;
   border-radius: 10px;
   border: none;
-  box-shadow: 0 5px 10px rgba(154, 160, 185, 0.05),
-      0 15px 40px rgba(0, 0, 0, 0.1);
-  color: white;
+  color: black;
   font-family: inherit;
-  font-size: 0.8rem;
+  font-size: 1.2rem;
   padding: 1rem;
   margin-bottom: 2rem;
 }
 
-input::placeholder {
-  color: #bbb;
-}
 
 .card {
   background-color: #fc4a1a;
